Remove visibility: hidden from .hide class, fixes #6190 again

--- a/scss/foundation/components/_global.scss
+++ b/scss/foundation/components/_global.scss
@@ -450,7 +450,6 @@ $cursor-text-value: text !default;
     // Hide visually and from screen readers
     .hide {
       display: none;
-      visibility: hidden;
     }
 
     // Hide visually and from screen readers, but maintain layout
